--- a/MeetingWeb-master/.env.development
+++ b/MeetingWeb-master/.env.development
@@ -2,7 +2,9 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'https://127.0.0.1:8081'
+# VUE_APP_BASE_API = 'https://127.0.0.1:8081'
+VUE_APP_BASE_API = 'https://192.168.102.116:8081'
+
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
