--- a/MeetingWeb-master/package.json
+++ b/MeetingWeb-master/package.json
@@ -5,7 +5,7 @@
   "author": "Pan <panfree23@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "vue-cli-service serve",
+    "dev": "vue-cli-service serve --inline --progress --config build/webpack.dev.conf.js --host 192.168.102.116",
     "build:prod": "vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
     "preview": "node build/index.js --preview",
